Accelerometer-graph added